# gbmulator

./: .gitignore  LICENSE  Makefile  README.md  index.html  index.js  index.wasm  style.css  template.html
.github/workflows/: c-cpp.yml  deploy_pages.yml
core/: core.d  utils.d
core/gb/: apu.d  boot.d  camera.d  cpu.d  dma.d  gb.d  joypad.d  link.d  mbc.d  mmu.d  ppu.d  timer.d
core/gba/: bus.d  cpu.d  dma.d  gba.d  ppu.d  tmr.d
core/gbprinter/: gbprinter.d
docs/: index.html  index.js  index.wasm  style.css
font/: make_font.py
platform/common/: alrenderer.d  app.d  bmp.d  config.d  glrenderer.d  link.d  utils.d
platform/web/: web.d
src/: apu.c  base64.c  base64.h  config.c  config.h  cpu.c  debug.c  gbmulator.c  gbmulator.h  gbmulator_wasm.c  gbmulator_wasm.h  joypad.c  link.c  mem.c  mmu.c  ppu.c  serial.c  timer.c  ui.c  ui.h  utils.c
src/bootroms/: LICENSE  cgb_boot.asm  dmg_boot.asm
src/bootroms/gb/: Makefile  cgb_boot.asm  dmg_boot.asm  module.mk
src/bootroms/gba/: Makefile  module.mk
src/core/: Makefile  apu.c  apu.h  boot.h  camera.c  camera.h  core.c  core.h  core_defs.h  core_priv.h  cpu.c  cpu.h  dma.c  dma.h  gb.c  gb.h  gb_priv.h  joypad.c  joypad.h  link.c  link.h  mbc.c  mbc.h  mmu.c  mmu.h  module.mk  ppu.c  ppu.h  printer.c  printer.h  serialize.h  timer.c  timer.h  types.h  utils.c  utils.h
src/core/gb/: apu.c  apu.h  camera.c  camera.h  cpu.c  cpu.h  dma.c  dma.h  gb.c  gb.h  gb_defs.h  gb_priv.h  joypad.c  joypad.h  link.c  link.h  mbc.c  mbc.h  mmu.c  mmu.h  ppu.c  ppu.h  printer.h  serialize.h  timer.c  timer.h  types.h  utils.h
src/core/gba/: bus.c  bus.h  cpu.c  cpu.h  dma.c  dma.h  gba.c  gba.h  gba_defs.h  gba_priv.h  ppu.c  ppu.h  tmr.c  tmr.h  types.h
src/core/gbprinter/: gbprinter.c  gbprinter.h  gbprinter_defs.h  gbprinter_priv.h
src/emulator/: apu.c  apu.h  boot.c  boot.h  cpu.c  cpu.h  dma.c  dma.h  emulator.c  emulator.h  emulator_priv.h  joypad.c  joypad.h  link.c  link.h  mbc.c  mbc.h  mmu.c  mmu.h  ppu.c  ppu.h  printer.c  printer.h  savestate.c  savestate.h  serialize.h  timer.c  timer.h  types.h  utils.c  utils.h
src/headers/: apu.h  boot.h  config.h  cpu.h  debug.h  gbmulator.h  joypad.h  link.h  mem.h  ppu.h  serial.h  types.h  ui.h  utils.h
src/platform/android/: android.c  layout_editor.c  layout_editor.h  module.mk  socket.h
src/platform/android/app/src/main/cpp/: CMakeLists.txt  Renderer.cpp  Renderer.h  Shader.cpp  main.cpp
src/platform/common/: Makefile  (+19 more)
test/: Makefile  compare_results.py  tester.c  tests_generator.py  tests_parser.py
test/results/: summary.txt
(+132 files in other folders)
